# sqla-lite

./: CONTRIBUTING.md  README.md  example.py  pyproject.toml  pytest.ini
.github/: CODEOWNERS
.github/workflows/: pr-tests.yml  publish-pypi.yml  version-and-tag.yml
sqla_lite/: __init__.py  core.py
tests/: test_core.py
