[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqla-lite"
version = "1.0.6"
description = "Lightweight and declarative wrapper over SQLAlchemy"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Marcos Rosa" }
]
keywords = ["sqlalchemy", "orm", "repository", "declarative"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries"
]
dependencies = [
  "sqlalchemy>=2.0.0"
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0"
]

[project.urls]
Homepage = "https://pypi.org/project/sqla-lite/"
Repository = "https://github.com/ElaraDevSolutions/sqla-lite"
Issues = "https://github.com/ElaraDevSolutions/sqla-lite/issues"

[tool.setuptools.packages.find]
include = ["sqla_lite*"]
